<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <TextView
            android:text="@string/cur_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/countEt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            app:title="@string/app_name_zhCN"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
    >
        <Switch
                android:text="@string/mode_infinite"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/modeSwitch"
                style="@android:style/Widget.Material.Light.CompoundButton.Switch"
                android:textOn="@string/on" android:textOff="@string/off"
                android:showText="true"/>
    </androidx.appcompat.widget.Toolbar>


    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:textOff="@string/start" android:textOn="@string/stop"
            app:layout_constraintTop_toTopOf="@+id/countEt" app:layout_constraintBottom_toBottomOf="@+id/countEt"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/countEt" app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/input_count" android:singleLine="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/toggleButton" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalCountTv"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:text="0"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/seekBar"
    />
    <com.yihaobeta.picomputor.ui.AutoAdjustScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/scrollview" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar">

    </com.yihaobeta.picomputor.ui.AutoAdjustScrollView>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="100"
            android:min="0"
            android:progress="3"
            android:id="@+id/seekBar"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
    />
    <TextView
            android:text="@string/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/seekBar" app:layout_constraintBottom_toBottomOf="@+id/seekBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>